@@ -1,5 +1,11 @@
 2001-10-20  Andrew Cagney  <ac131313@redhat.com>
 
+	* jv-lang.h: Add #ifndef JV_LANG_H wrapper.
+	(struct value): Add opaque declaration.  Replace value_ptr with
+	``struct value *''.
+	* jv-valprint.c, jv-lang.c: Replace value_ptr with equivalent
+	struct.
+
 	* wrapper.h (struct value): Add opaque declaration.  Replace
 	value_ptr with ``struct value *''.
 	* wrapper.c: Replace value_ptr with ``struct value *''.
